# dkcli

./: Cargo.toml  LICENSE  README.md  example.toml
.github/workflows/: checks.yaml
i18n/en-US/: dkcli.ftl
i18n/zh-CN/: dkcli.ftl
src/: i18n.rs  main.rs  parser.rs
