[package]
name = "dkcli"
version = "0.3.1"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread"] }
anyhow = "1"
zbus = { version = "4.2", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
inquire = "0.7.5"
reqwest = { version = "0.12.5", features = ["json"] }
simplelog = "0.12.2"
log = "0.4"
nom = "7"
ctrlc = "3.4.4"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
once_cell = "1.18"

# i18n
i18n-embed = { version = "0.14", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.8"
rust-embed = "^8"
unic-langid = "0.9"
